distro/intel-axxia: Mask only lttng alternative recipes
When alternative kernels are disabled from local.conf, we should
skip only the lttng-modules for alternative kernels. But the main
append recipe (lttng-modules_2.11.1.bbappend) should be used to
include the fix for kernel > v5.4.19.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-vcn/conf/distro/intel-axxia.conf
+++ b/meta-intel-vcn/conf/distro/intel-axxia.conf
@@ -24,7 +24,7 @@ include conf/distro/include/intel-axxia-flags.inc
 BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
 			'simics-client* libmagicpipe*', d)} \
 		  ${@oe.utils.conditional('ALTERNATIVE_KERNELS', '', \
-			'meta-intel-vcn/recipes-kernel/lttng', '', d)} \
+			'meta-intel-vcn/recipes-kernel/lttng/lttng-modules-alternative*', '', d)} \
 		  ${@bb.utils.contains('BBFILE_COLLECTIONS', 'intel-rdk', \
 			'meta-intel-vcn/recipes-connectivity/thrift', '', d)} \
 		  "
