--- a/meta-intel-vcn/conf/layer.conf
+++ b/meta-intel-vcn/conf/layer.conf
@@ -3,7 +3,9 @@ BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-	${LAYERDIR}/recipes-*/*/*.bbappend"
+	${LAYERDIR}/recipes-*/*/*.bbappend \
+	${LAYERDIR}/../common/recipes-*/*/*.bb \
+	${LAYERDIR}/../common/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "intel-vcn"
 BBFILE_PATTERN_intel-vcn := "^${LAYERDIR}/"
