--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/snr-runtarget.cfg
@@ -110,3 +110,10 @@ CONFIG_GPIO_PCA953X=y
 CONFIG_I2C_MUX_PCA954x=y
 
 CONFIG_DRM_AST=y
+
+CONFIG_EDAC=y
+CONFIG_EDAC_I10NM=y
+
+CONFIG_KEXEC=y
+CONFIG_CRASH_CORE=y
+CONFIG_KEXEC_CORE=y
