meta-intel-rdk: Move RDK archives path and name to recipes
In order to have a clean layer.conf, move the RDK archive
variables (RDK_KLM_ARCHIVE and RDK_TOOLS_ARCHIVE) in the recipes.

Also, remove the RDK archive path variable (RDK_ARCHIVE_PATH)
and use directly in the recipes a generit LAYER_PATH for RDK
layer defined in layer.conf (the only place where LAYERDIR
can be used).

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -14,4 +14,6 @@ BBFILE_PRIORITY_intel-rdk = "6"
 LAYERSERIES_COMPAT_intel-rdk = "zeus"
 LAYERDEPENDS_intel-rdk = "intel-snr"
 
+LAYER_PATH_meta-intel-rdk = "${LAYERDIR}" 
+
 require conf/distro/include/rdk-defaults.inc
