--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -3,9 +3,7 @@ BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-	${LAYERDIR}/recipes-*/*/*.bbappend \
-	${LAYERDIR}/../common/recipes-*/*/*.bb \
-	${LAYERDIR}/../common/recipes-*/*/*.bbappend"
+	${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "intel-rdk"
 BBFILE_PATTERN_intel-rdk = "^${LAYERDIR}/"
