Drop master compatibility for dunfell release (yocto 3.1)
Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/conf/layer.conf
+++ b/meta-intel-snr/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "intel-snr"
 BBFILE_PATTERN_intel-snr := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-snr = "5"
 
-LAYERSERIES_COMPAT_intel-snr = "zeus"
+LAYERSERIES_COMPAT_intel-snr = "dunfell"
 LAYERDEPENDS_intel-snr = "intel"
