intel-axxia: Add support for gcc 8.3
Performance test are not going well with gcc9, even with the same
options as gcc8. Also, for performance test, we might want to be
able to build with both and compare.

A0308 - Add the Option to use GCC8 on the dunfell Branch for SNR

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-vcn/conf/local.conf.sample
+++ b/meta-intel-vcn/conf/local.conf.sample
@@ -23,6 +23,9 @@ DISTRO_FEATURES_append = " simicsfs"
 # Enable "multilib"
 #DISTRO_FEATURES_append = " multilib"
 
+# Enable GCC8 feature for the previous version of gcc
+#DISTRO_FEATURES_append = " gcc8"
+
 # Release version should be the meta-intel-axxia repository tag from release note.
 # RELEASE_VERSION = "" 
 
