--- a/meta-intel-vcn/conf/distro/intel-axxia.conf
+++ b/meta-intel-vcn/conf/distro/intel-axxia.conf
@@ -22,6 +22,9 @@ include conf/distro/include/intel-axxia-flags.inc
 #DISTRO_FEATURES_append = " simicsfs"
 #SIMICS_VERSION = ""
 
+# Choose GCC version: 9.% (gcc9) or 11.% (gcc11). Default version: 10.%
+#DISTRO_FEATURES_append = " gcc9"
+
 # Select the version of python3 to use: 3.9 (default) or 3.6.
 #PYTHON_VERSION = "3.6"
 
