--- a/meta-intel-vcn/conf/local.conf.sample
+++ b/meta-intel-vcn/conf/local.conf.sample
@@ -15,6 +15,9 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 # Enable "multilib"
 #DISTRO_FEATURES_append = " multilib"
 
+# Choose GCC version: 9.% (gcc9) or 11.% (gcc11). Default version: 10.%
+#DISTRO_FEATURES_append = " gcc9"
+
 # Select the version of python3 to use: 3.9 (default) or 3.6
 #PYTHON_VERSION = "3.6"
 
