linux: debug: Enable some tracing and syscall options
Just for the debug kernels, enable some tracing and syscall kernel
options (in the debug fragment) for testing/validation purpose.

A0310 - Some kernel options need to be added in kernel default config

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/5.4/debug.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/5.4/debug.cfg
@@ -45,3 +45,13 @@ CONFIG_DEBUG_NOTIFIERS=y
 CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_RCU_TRACE=y
 CONFIG_DEBUG_PAGEALLOC=y
+
+CONFIG_PROFILING=y
+CONFIG_FUNCTION_PROFILER=y
+CONFIG_SCHED_TRACER=y
+CONFIG_STACK_TRACER=y
+CONFIG_IRQSOFF_TRACER=y
+CONFIG_LATENCYTOP=y
+CONFIG_SYSCTL_SYSCALL=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
