distro/intel-axxia: Add option to select python3 version
For python3 package we have now available 2 versions: 3.9 (default
in dunfell branch) and 3.6 (custom recipe required for some AXXIA
python3 scripts).

The version of python3 to be use can be selected through PYTHON_VERSION
variable in local.conf. If not set, will use the default version.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-vcn/conf/distro/intel-axxia.conf
+++ b/meta-intel-vcn/conf/distro/intel-axxia.conf
@@ -22,6 +22,9 @@ include conf/distro/include/intel-axxia-flags.inc
 #DISTRO_FEATURES_append = " simicsfs"
 #SIMICS_VERSION = ""
 
+# Select the version of python3 to use: 3.9 (default) or 3.6.
+#PYTHON_VERSION = "3.6"
+
 BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
 			'simics-client* libmagicpipe*', d)} \
 		  ${@oe.utils.conditional('ALTERNATIVE_KERNELS', '', \
