--- a/meta-intel-vcn/conf/distro/intel-axxia.conf
+++ b/meta-intel-vcn/conf/distro/intel-axxia.conf
@@ -25,6 +25,9 @@ include conf/distro/include/intel-axxia-flags.inc
 # Enable GCC8 feature for the previous version of gcc and glibc
 #DISTRO_FEATURES_append = " gcc8"
 
+# Select the version of python3 to use: 3.8 (default) or 3.6.
+#PYTHON_VERSION = "3.6"
+
 BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
 			'simics-client* libmagicpipe*', d)} \
 		  ${@oe.utils.conditional('ALTERNATIVE_KERNELS', '', \
