--- a/meta-intel-vcn/conf/distro/intel-axxia.conf
+++ b/meta-intel-vcn/conf/distro/intel-axxia.conf
@@ -18,8 +18,9 @@ include conf/distro/include/intel-axxia-defaults.inc
 include conf/distro/include/intel-axxia-custom.inc
 include conf/distro/include/intel-axxia-flags.inc
 
-# Enable SIMICSFS client support
+# Enable SIMICSFS client support and set the version to compile
 #DISTRO_FEATURES_append = " simicsfs"
+#SIMICS_VERSION = ""
 
 # Enable GCC8 feature for the previous version of gcc
 #DISTRO_FEATURES_append = " gcc8"
