Add CONFIG_CRYPTO_USER*=y to the Linux Config
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
@@ -118,3 +118,10 @@ CONFIG_X86_X2APIC=y
 
 CONFIG_BRIDGE_NF_EBTABLES=m
 CONFIG_BRIDGE_EBT_T_NAT=m
+
+CONFIG_CRYPTO_USER=y
+CONFIG_CRYPTO_USER_API=y
+CONFIG_CRYPTO_USER_API_HASH=y
+CONFIG_CRYPTO_USER_API_SKCIPHER=y
+CONFIG_CRYPTO_USER_API_RNG=y
+CONFIG_CRYPTO_USER_API_AEAD=y
