--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -23,7 +23,7 @@ SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
-APPEND = "console=tty0 console=ttyS0,115200 console=ttyS4,115200 intel_iommu=on idle=poll"
+APPEND = "console=tty0 console=ttyS0,115200 console=ttyS4,115200 reboot=p,w intel_iommu=on idle=poll"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "snr-32"
 MULTILIBS = "multilib:lib32"
