Set the Reboot Type in the Linux Command Line
Make the default PCI and Warm (reboot=p,w).

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -23,7 +23,7 @@ SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS0"
 
 SNR_SERIAL_CONSOLE ?= "ttyS0"
-APPEND = "console=tty0 console=${SNR_SERIAL_CONSOLE},115200 intel_iommu=on idle=poll"
+APPEND = "console=tty0 console=${SNR_SERIAL_CONSOLE},115200 reboot=p,w intel_iommu=on idle=poll"
 GRUB_SERIAL = "console=${SNR_SERIAL_CONSOLE},115200"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "snr-32"
