--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -20,11 +20,10 @@ KEEPUIMAGE = "no"
 EFI_PROVIDER ?= "grub-efi"
 
 SYSLINUX_OPTS = "serial 0 115200"
-SERIAL_CONSOLES = "115200;ttyS4"
+SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
+SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
-SNR_SERIAL_CONSOLE ?= "ttyS4"
-APPEND = "console=tty0 console=${SNR_SERIAL_CONSOLE},115200 intel_iommu=on idle=poll"
-GRUB_SERIAL = "console=${SNR_SERIAL_CONSOLE},115200"
+APPEND = "console=tty0 console=ttyS0,115200 console=ttyS4,115200 intel_iommu=on idle=poll"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "snr-32"
 MULTILIBS = "multilib:lib32"
@@ -36,8 +35,8 @@ NOISO = "0"
 
 IMAGE_FSTYPES += "wic"
 WKS_FILE = "${@bb.utils.contains_any("EFI_PROVIDER", "systemd-boot", \
-	   "systemd-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", \
-	   "grub-bootdisk-microcode-${SNR_SERIAL_CONSOLE}.wks", d)}"
+	   "axxia-systemd-bootdisk-microcode.wks", \
+	   "axxia-grub-bootdisk-microcode.wks", d)}"
 WKS_FILE_DEPENDS_append = " intel-microcode"
 
 # QEMU usermode fails with invalid instruction error
