--- a/meta-intel-vcn/conf/layer.conf
+++ b/meta-intel-vcn/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_COLLECTIONS += "intel-vcn"
 BBFILE_PATTERN_intel-vcn := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-vcn = "5"
 
-LAYERSERIES_COMPAT_intel-vcn = "dunfell"
+LAYERSERIES_COMPAT_intel-vcn = "gatesgarth"
 LAYERDEPENDS_intel-vcn = " \
 	core \
 	yocto \
