linux: Update fragments for Kernel v5.10
Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -67,6 +67,8 @@ CONFIG_ACPI_NUMA=y
 
 CONFIG_STAGING=y
 
+CONFIG_CONFIGFS_FS=y
+
 CONFIG_NVME_CORE=y
 CONFIG_BLK_DEV_NVME=y
 CONFIG_NVME_MULTIPATH=y
