--- a/meta-intel-rdk/recipes-kernel/linux/frags/rdk-extra.cfg
+++ b/meta-intel-rdk/recipes-kernel/linux/frags/rdk-extra.cfg
@@ -81,7 +81,6 @@ CONFIG_HW_RANDOM_VIA=m
 # CONFIG_PINCTRL_BROXTON is not set
 # CONFIG_PINCTRL_CANNONLAKE is not set
 # CONFIG_PINCTRL_SUNRISEPOINT is not set
-# CONFIG_GPIOLIB is not set
 CONFIG_DRM_I915=y
 # CONFIG_DRM_I915_ALPHA_SUPPORT is not set
 CONFIG_SOUND_OSS_CORE=y
@@ -89,6 +88,7 @@ CONFIG_SOUND_OSS_CORE_PRECLAIM=y
 CONFIG_SND_TIMER=y
 CONFIG_SND_PCM=y
 CONFIG_SND_SEQUENCER=y
+CONFIG_SND_SEQ_MIDI_EVENT=y
 CONFIG_SND_OSSEMUL=y
 CONFIG_SND_MIXER_OSS=y
 CONFIG_SND_PCM_OSS=y
