--- a/meta-intel-snr/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -127,3 +127,7 @@ CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
+
+# CONFIG_BT is not set
+
+# CONFIG_SOUND is not set
