--- a/meta-intel-snr/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -29,7 +29,6 @@ CONFIG_BPF_SYSCALL=y
 # CONFIG_SKY2 is not set
 # CONFIG_FS_ENCRYPTION is not set
 # CONFIG_PROC_CHILDREN is not set
-# CONFIG_OPTIMIZE_INLINING is not set
 # CONFIG_ENCRYPTED_KEYS is not set
 
 CONFIG_DEVKMEM=y
@@ -60,7 +59,7 @@ CONFIG_VFIO_NOIOMMU=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_KVM_VFIO=y
 
-CONFIG_UIO=m
+CONFIG_UIO=y
 CONFIG_UIO_PCI_GENERIC=y
 
 CONFIG_ACPI_NUMA=y
