--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -20,10 +20,10 @@ KEEPUIMAGE = "no"
 EFI_PROVIDER ?= "grub-efi"
 
 SYSLINUX_OPTS = "serial 0 115200"
-SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
+SERIAL_CONSOLES = "115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
-APPEND = "console=tty0 console=ttyS0,115200 console=ttyS4,115200 intel_iommu=on idle=poll"
+APPEND = "console=tty0 console=ttyS4,115200 intel_iommu=on idle=poll"
 
 DEFAULTTUNE_virtclass-multilib-lib32 = "snr-32"
 MULTILIBS = "multilib:lib32"
