layer.conf: Add hardknott to LAYERSERIES_COMPAT
hardknott is the release name for Yocto 3.3.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "intel-rdk"
 BBFILE_PATTERN_intel-rdk = "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-rdk = "6"
 
-LAYERSERIES_COMPAT_intel-rdk = "gatesgarth"
+LAYERSERIES_COMPAT_intel-rdk = "hardknott"
 LAYERDEPENDS_intel-rdk = "intel-snr openembedded-layer"
 
 LAYER_PATH_meta-intel-rdk = "${LAYERDIR}" 
