Enable PINCTRL_EMMITSBURG in Linux
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/5.10/snr-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/5.10/snr-runtarget.cfg
@@ -11,6 +11,8 @@
 #
 #.........................................................................
 
+CONFIG_PINCTRL_EMMITSBURG=y
+
 CONFIG_PCIEAER_INJECT=y
 CONFIG_ACPI_APEI_PCIEAER=y
 CONFIG_X86_MCE_INJECT=y
