linux: Disable the LPSS Driver for Now
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/5.10/snr-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/5.10/snr-runtarget.cfg
@@ -119,3 +119,8 @@ CONFIG_KEXEC_CORE=y
 CONFIG_MACSEC=m
 
 CONFIG_I3C=y
+
+# CONFIG_X86_INTEL_LPSS is not set
+# CONFIG_SERIAL_8250_LPSS is not set
+# CONFIG_MFD_INTEL_LPSS_ACPI is not set
+# CONFIG_MFD_INTEL_LPSS_PCI is not set
