--- a/meta-intel-snr/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -114,6 +114,8 @@ CONFIG_DMATEST=m
 CONFIG_ACPI_APEI=y
 CONFIG_ACPI_APEI_EINJ=y
 
+CONFIG_ACPI_WATCHDOG=y
+CONFIG_WDAT_WDT=m
 CONFIG_ITCO_WDT=m
 
 CONFIG_IRQ_REMAP=y
