Rename layer: change all references to the old names
The purpose is to merge SNR and GRR branches.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-distro/conf/layer.conf
+++ b/meta-intel-distro/conf/layer.conf
@@ -7,12 +7,12 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/../common/recipes-*/*/*.bb \
 	${LAYERDIR}/../common/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "intel-vcn"
-BBFILE_PATTERN_intel-vcn := "^${LAYERDIR}/"
-BBFILE_PRIORITY_intel-vcn = "5"
+BBFILE_COLLECTIONS += "intel-distro"
+BBFILE_PATTERN_intel-distro := "^${LAYERDIR}/"
+BBFILE_PRIORITY_intel-distro = "5"
 
-LAYERSERIES_COMPAT_intel-vcn = "hardknott"
-LAYERDEPENDS_intel-vcn = " \
+LAYERSERIES_COMPAT_intel-distro = "hardknott"
+LAYERDEPENDS_intel-distro = " \
 	core \
 	yocto \
 	openembedded-layer \
@@ -24,7 +24,7 @@ LAYERDEPENDS_intel-vcn = " \
 	tpm-layer \
 	virtualization-layer \
 	intel \
-	intel-snr \
+	intel-bsp \
 "
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
