--- a/meta-intel-bsp/conf/layer.conf
+++ b/meta-intel-bsp/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "intel-snr"
-BBFILE_PATTERN_intel-snr := "^${LAYERDIR}/"
-BBFILE_PRIORITY_intel-snr = "5"
+BBFILE_COLLECTIONS += "intel-bsp"
+BBFILE_PATTERN_intel-bsp := "^${LAYERDIR}/"
+BBFILE_PRIORITY_intel-bsp = "5"
 
-LAYERSERIES_COMPAT_intel-snr = "hardknott"
-LAYERDEPENDS_intel-snr = "intel"
+LAYERSERIES_COMPAT_intel-bsp = "hardknott"
+LAYERDEPENDS_intel-bsp = "intel"
