Change all references to the old axxiax86-64 machine
The purpose is to merge SNR and GRR branches.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -1,4 +1,5 @@
-MACHINE = "axxiax86-64"
+# Intel Axxia hardware board target machine: intel-axxia-snr or intel-axxia-grr
+MACHINE = "intel-axxia-snr"
 
 # System where the image will run: snr, frio
 RUNTARGET = "snr"
