Rename RUNTARGET option for Victoria Canyon: snr->vcn
RUNTARGET variable is used to choose the reference platform
where the image will run:
- 'snr' -> 'vcn' for Victoria Canyon board or ASE (default)
- 'frio' for  Frio FPGA Emulation System

The purpose is to merge SNR and GRR branches.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -1,8 +1,9 @@
 # Intel Axxia hardware board target machine: intel-axxia-snr or intel-axxia-grr
 MACHINE = "intel-axxia-snr"
 
-# System where the image will run: snr, frio
-RUNTARGET = "snr"
+# System where the image will run: 'vcn' for Victoria Canyon board or ASE, 
+# 'frio' for Frio FPGA Emulation System
+RUNTARGET = "vcn"
 
 # Kernel providers: linux-intel, linux-intel-rt, linux-intel-debug, linux-intel-rt-debug
 # linux-yocto, linux-yocto-rt, linux-yocto-debug, linux-yocto-rt-debug
