linux: Merge kernel fragments from GRR branches
Add extra kernel options in fragments from GRR branches:
- Turn Off Bluetooth and Sound
- Add the IDXD (Intel DSA DMA Driver)
- Enable PINCTRL_EMMITSBURG
- Add I3C support

The purpose is to merge SNR and GRR branches.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -107,6 +107,8 @@ CONFIG_KVM_INTEL=m
 CONFIG_LIBCRC32C=y
 CONFIG_CRC8=y
 
+CONFIG_INTEL_IDXD=m
+
 CONFIG_DMATEST=m
 
 CONFIG_ACPI_APEI=y
@@ -126,3 +128,7 @@ CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
+
+# CONFIG_BT is not set
+
+# CONFIG_SOUND is not set
