--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/vcn-runtarget.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/vcn-runtarget.cfg
@@ -12,6 +12,9 @@
 #.........................................................................
 
 CONFIG_PCIEAER=y
+
+CONFIG_PINCTRL_EMMITSBURG=y
+
 CONFIG_PCIEAER_INJECT=y
 CONFIG_ACPI_APEI_PCIEAER=y
 CONFIG_X86_MCE_INJECT=y
@@ -116,3 +119,5 @@ CONFIG_CRASH_CORE=y
 CONFIG_KEXEC_CORE=y
 
 CONFIG_MACSEC=m
+
+CONFIG_I3C=y
