--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -11,6 +11,117 @@
 #
 #.........................................................................
 
+CONFIG_PCIEAER=y
+
+CONFIG_PINCTRL_EMMITSBURG=y
+
+CONFIG_PCIEAER_INJECT=y
+CONFIG_ACPI_APEI_PCIEAER=y
+CONFIG_X86_MCE_INJECT=y
+CONFIG_X86_MCELOG_LEGACY=y
+
+CONFIG_ACPI_PCI_SLOT=y
+CONFIG_HOTPLUG_PCI_PCIE=y
+CONFIG_HOTPLUG_PCI_ACPI=y
+CONFIG_HOTPLUG_PCI_ACPI_IBM=m
+CONFIG_HOTPLUG_PCI_SHPC=y
+
+CONFIG_PPS_CLIENT_GPIO=m
+CONFIG_GPIO_ICH=m
+CONFIG_GPIO_CRYSTAL_COVE=y
+CONFIG_BCMA_DRIVER_GPIO=y
+
+CONFIG_NFSD=y
+
+# CONFIG_PCI_PRI is not set
+# CONFIG_PCI_PASID is not set
+
+CONFIG_NETFILTER_NETLINK=y
+CONFIG_NETFILTER_NETLINK_QUEUE=y
+CONFIG_NETFILTER_NETLINK_LOG=y
+# CONFIG_NF_CT_PROTO_DCCP is not set
+CONFIG_NF_NAT_PPTP=m
+CONFIG_NF_NAT_H323=m
+# CONFIG_IP_NF_MATCH_RPFILTER is not set
+# CONFIG_IP_NF_TARGET_SYNPROXY is not set
+# CONFIG_IP_NF_SECURITY is not set
+
+CONFIG_NET_SCH_INGRESS=y
+
+# CONFIG_CGROUP_NET_PRIO is not set
+
+CONFIG_CAN=y
+CONFIG_CAN_C_CAN=y
+CONFIG_RFKILL_INPUT=y
+CONFIG_RFKILL_GPIO=m
+
+CONFIG_MTD=y
+CONFIG_MTD_REDBOOT_PARTS=y
+CONFIG_MTD_CMDLINE_PARTS=y
+CONFIG_MTD_BLKDEVS=y
+CONFIG_MTD_BLOCK=y
+CONFIG_FTL=y
+CONFIG_NFTL=y
+CONFIG_MTD_CFI=y
+CONFIG_MTD_GEN_PROBE=y
+CONFIG_MTD_CFI_INTELEXT=y
+CONFIG_MTD_CFI_AMDSTD=y
+CONFIG_MTD_CFI_STAA=y
+CONFIG_MTD_CFI_UTIL=y
+CONFIG_MTD_SPI_NOR=y
+CONFIG_MTD_SPI_NOR_USE_4K_SECTORS=y
+CONFIG_SPI_INTEL_SPI=y
+CONFIG_SPI_INTEL_SPI_PCI=y
+CONFIG_SPI_INTEL_SPI_PLATFORM=y
+
+# CONFIG_VIRTIO_BLK is not set
+# CONFIG_BLK_DEV_NVME is not set
+# CONFIG_SCSI_VIRTIO is not set
+
+CONFIG_MDIO_DEVICE=y
+
+# CONFIG_KGDB is not set
+
+CONFIG_PINCTRL_CEDARFORK=y
+
+CONFIG_SERIAL_8250_NR_UARTS=32
+CONFIG_SERIAL_8250_RUNTIME_UARTS=32
+CONFIG_SERIAL_8250_EXTENDED=y
+CONFIG_SERIAL_8250_MANY_PORTS=y
+CONFIG_SERIAL_8250_SHARE_IRQ=y
+CONFIG_SERIAL_8250_RSA=y
+
+CONFIG_CRYPTO_RSA=y
+CONFIG_CRYPTO_DH=y
+CONFIG_CRYPTO_LRW=y
+
+CONFIG_HW_RANDOM_TPM=y
+CONFIG_TCG_TPM=y
+CONFIG_TCG_TIS_CORE=y
+CONFIG_TCG_TIS=y
+CONFIG_TCG_TIS_I2C_INFINEON=y
+CONFIG_TCG_NSC=y
+CONFIG_TCG_ATMEL=y
+CONFIG_TCG_INFINEON=y
+CONFIG_TCG_CRB=y
+
+CONFIG_GPIO_PCA953X=y
+CONFIG_I2C_MUX_PCA954x=y
+
+CONFIG_DRM_AST=y
+
+CONFIG_EDAC=y
+CONFIG_EDAC_DEBUG=y
+CONFIG_EDAC_I10NM=y
+
+CONFIG_KEXEC=y
+CONFIG_CRASH_CORE=y
+CONFIG_KEXEC_CORE=y
+
+CONFIG_MACSEC=m
+
+CONFIG_I3C=y
+
 CONFIG_EXPERT=y
 
 CONFIG_ASN1=y
