linux: Fix kernel option warnings
Besides fixing lor of kernel option warnings (most of them
caused by disabling CONFIG_SOUND and CONFIG_BT), I removed
rdk-extra.cfg kernel fragment and moved all important options
in common-non-hw.cfg fragment, since the RDK layer should
contains only options related to RDK KLM drivers.
Also, I removed duplicated kernel options.

B0245 - Warnings During Yocto Build of GRR

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -32,6 +32,8 @@ CONFIG_GPIO_CRYSTAL_COVE=y
 CONFIG_BCMA_DRIVER_GPIO=y
 
 CONFIG_NFSD=y
+# CONFIG_NFSD_V3 is not set
+# CONFIG_NFSD_V4 is not set
 
 # CONFIG_PCI_PRI is not set
 # CONFIG_PCI_PASID is not set
@@ -47,8 +49,6 @@ CONFIG_NF_NAT_H323=m
 # CONFIG_IP_NF_SECURITY is not set
 
 CONFIG_NET_SCH_INGRESS=y
-
-# CONFIG_CGROUP_NET_PRIO is not set
 
 CONFIG_CAN=y
 CONFIG_CAN_C_CAN=y
@@ -75,7 +75,6 @@ CONFIG_SPI_INTEL_SPI_PCI=y
 CONFIG_SPI_INTEL_SPI_PLATFORM=y
 
 # CONFIG_VIRTIO_BLK is not set
-# CONFIG_BLK_DEV_NVME is not set
 # CONFIG_SCSI_VIRTIO is not set
 
 CONFIG_MDIO_DEVICE=y
@@ -130,7 +129,6 @@ CONFIG_ASN1=y
 
 # CONFIG_CGROUP_PERF is not set
 # CONFIG_CGROUP_PIDS is not set
-# CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_BPF_SYSCALL=y
 # CONFIG_RANDOMIZE_BASE is not set
 # CONFIG_TYPHOON is not set
@@ -146,6 +144,7 @@ CONFIG_DEVKMEM=y
 CONFIG_DEVMEM=y
 # CONFIG_STRICT_DEVMEM is not set
 
+# CONFIG_DEBUG_INFO is not set
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
 
@@ -240,8 +239,53 @@ CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
 
-# CONFIG_BT is not set
+CONFIG_AUXILIARY_BUS=y
 
 # CONFIG_SOUND is not set
+# CONFIG_SND is not set
+# CONFIG_SND_PCI is not set
+# CONFIG_SND_HDA_INTEL is not set
+# CONFIG_SND_HDA_GENERIC is not set
+# CONFIG_SND_HDA_CODEC_HDMI is not set
+# CONFIG_SND_HDA_CODEC_ANALOG is not set
+# CONFIG_SND_HDA_CODEC_REALTEK is not set
+# CONFIG_SND_HDA_CODEC_SIGMATEL is not set
+# CONFIG_SND_HDA_CODEC_CIRRUS is not set
+# CONFIG_SND_HDA_CODEC_CONEXANT is not set
+# CONFIG_SND_HDA_CODEC_CA0110 is not set
+# CONFIG_SND_HDA_CODEC_CA0132 is not set
+# CONFIG_SND_HDA_CODEC_CMEDIA is not set
+# CONFIG_SND_HDA_CODEC_SI3054 is not set
+# CONFIG_SND_SOC is not set
+# CONFIG_SND_HDA_I915 is not set
+# CONFIG_SND_SOC_INTEL_SKL_RT286_MACH is not set
+# CONFIG_SND_SOC_INTEL_SST is not set
+# CONFIG_SND_DYNAMIC_MINORS is not set
+# CONFIG_USB_AUDIO is not set
+# CONFIG_USB_MIDI_GADGET is not set
 
-CONFIG_AUXILIARY_BUS=y
+# CONFIG_BT is not set
+# CONFIG_BT_6LOWPAN is not set
+# CONFIG_BT_BNEP is not set
+# CONFIG_BT_RFCOMM is not set
+# CONFIG_BT_RFCOMM_TTY is not set
+# CONFIG_BT_BNEP_MC_FILTER is not set
+# CONFIG_BT_BNEP_PROTO_FILTER is not set
+# CONFIG_BT_CMTP is not set
+# CONFIG_BT_HIDP is not set
+# CONFIG_BT_LE is not set
+# CONFIG_BT_BREDR is not set
+# CONFIG_BT_HCIUART_INTEL is not set
+# CONFIG_ISDN_CAPI is not set
+
+# CONFIG_VIDEO_IVTV_ALSA is not set
+# CONFIG_VIDEO_CX18_ALSA is not set
+# CONFIG_VIDEO_CX23885 is not set
+# CONFIG_VIDEO_CX25821_ALSA is not set
+# CONFIG_VIDEO_CX88_ALSA is not set
+# CONFIG_VIDEO_SAA7134_ALSA is not set
+# CONFIG_VIDEO_TM6000_ALSA is not set
+# CONFIG_VIDEO_EM28XX_ALSA is not set
+# CONFIG_VIDEO_CX231XX_ALSA is not set
+# CONFIG_MEDIA_ALTERA_CI is not set
+
