Enable VFIO_MDEV in the Linux Configuration
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -166,6 +166,7 @@ CONFIG_IXGBE=y
 # CONFIG_SERIAL_8250_DMA is not set
 
 CONFIG_VFIO_NOIOMMU=y
+CONFIG_VFIO_MDEV=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_KVM_VFIO=y
 
