--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -81,6 +81,8 @@ CONFIG_MDIO_DEVICE=y
 
 # CONFIG_KGDB is not set
 
+CONFIG_PCI_PASID=y
+
 CONFIG_PINCTRL_CEDARFORK=y
 
 CONFIG_SERIAL_8250_NR_UARTS=32
@@ -290,4 +292,3 @@ CONFIG_AUXILIARY_BUS=y
 # CONFIG_VIDEO_EM28XX_ALSA is not set
 # CONFIG_VIDEO_CX231XX_ALSA is not set
 # CONFIG_MEDIA_ALTERA_CI is not set
-
