--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -18,8 +18,8 @@ include conf/distro/include/intel-axxia-defaults.inc
 include conf/distro/include/intel-axxia-custom.inc
 include conf/distro/include/intel-axxia-flags.inc
 
-# Enable SIMICSFS client support and set the version to compile
-#DISTRO_FEATURES_append = " simicsfs"
+# Enable SIMICS support and set the version to compile
+#DISTRO_FEATURES_append = " simics"
 #SIMICS_VERSION = ""
 
 # Choose GCC version: 9.% (gcc9) or 10.% (gcc10). Default version: 11.%
@@ -28,8 +28,8 @@ include conf/distro/include/intel-axxia-flags.inc
 # Select the version of python3 to use: 3.9 (default) or 3.6.
 #PYTHON_VERSION = "3.6"
 
-BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
-			'simics-client* libmagicpipe*', d)} \
+BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simics', '', \
+			'meta-intel-distro/recipes-support/simics', d)} \
 		  ${@oe.utils.conditional('ALTERNATIVE_KERNELS', '', \
 			'meta-intel-distro/recipes-kernel/lttng/lttng-modules-alternative*', '', d)} \
 		  "
