--- a/meta-intel-snr/recipes-kernel/linux/frags/5.4/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/5.4/common-non-hw.cfg
@@ -36,6 +36,7 @@ CONFIG_DEVKMEM=y
 CONFIG_DEVMEM=y
 # CONFIG_STRICT_DEVMEM is not set
 
+# CONFIG_DEBUG_INFO is not set
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
 
