linux: Enable DEBUG_INFO only for debug kernels
Until now, DEBUG_INFO kernel option was enabled by default
in all kernels, except the ones including RDK modules (through
rdk-extra.cfg fragment). This resulted in modules with huge sizes
and a modules archive 30 times bigger than a normal one.

Since debugging info is required only in a debug kernel, enable
this option only for debug kernels  and disable the options for
normal ones (preempt-rt or standard).

B0212 - Huge size differences between modules archives

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/common-non-hw.cfg
@@ -36,6 +36,7 @@ CONFIG_DEVKMEM=y
 CONFIG_DEVMEM=y
 # CONFIG_STRICT_DEVMEM is not set
 
+# CONFIG_DEBUG_INFO is not set
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
 
