--- a/meta-intel-snr/recipes-kernel/linux/frags/4.19/debug.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.19/debug.cfg
@@ -27,6 +27,7 @@ CONFIG_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=n
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=8192
 CONFIG_DEBUG_RT_MUTEXES=y
+CONFIG_DEBUG_INFO=y
 
 CONFIG_PROVE_LOCKING=y
 CONFIG_LOCK_STAT=y
