--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -1,5 +1,5 @@
 # Intel Axxia hardware board target machine: intel-axxia-snr or intel-axxia-grr
-MACHINE = "intel-axxia-snr"
+MACHINE = "intel-axxia-grr"
 
 # Kernel providers: linux-intel, linux-intel-rt, linux-intel-debug, linux-intel-rt-debug
 # linux-yocto, linux-yocto-rt, linux-yocto-debug, linux-yocto-rt-debug
