distro: Add support for python 3.8
Add support in distro layer to support 3 different versions of
python3: 3.9 (default), 3.8 or 3.6

A0349 - GRR -- Create a Python 3.8 Recipe

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -25,8 +25,8 @@ include conf/distro/include/intel-axxia-flags.inc
 # Choose GCC version: 9.% (gcc9) or 10.% (gcc10). Default version: 11.%
 #DISTRO_FEATURES_append = " gcc9"
 
-# Select the version of python3 to use: 3.9 (default) or 3.6.
-#PYTHON_VERSION = "3.6"
+# Select the version of python3 to use: 3.9 (default), 3.8 or 3.6.
+#PYTHON_VERSION = "3.8"
 
 BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simics', '', \
 			'meta-intel-distro/recipes-support/simics', d)} \
