--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -16,8 +16,8 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 # Choose GCC version: 9.% (gcc9) or 10.% (gcc10). Default version: 11.%
 #DISTRO_FEATURES_append = " gcc9"
 
-# Select the version of python3 to use: 3.9 (default) or 3.6
-#PYTHON_VERSION = "3.6"
+# Select the version of python3 to use: 3.9 (default), 3.8 or 3.6
+#PYTHON_VERSION = "3.8"
 
 # Release version should be the meta-intel-axxia repository tag from release note.
 # RELEASE_VERSION = "" 
