distro: Add support for genericx86-64 machine
For Intel QSP System used in simulation, we'll use genericx86-64
machine defined in meta-yocto-bsp layer from poky repository
(included in conf/bblayers.conf.sample) and axxia-image-qsp image.

Regarding the kernel, linux-yocto is the only compatible kernel
with genericx86-64 machine and is set as default.
Alternative kernels are disabled for genericx86-64 machine.

A0352 - GRR (next/hardknott) Add a New Machine Type (generic-x86_64)

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-distro/conf/bblayers.conf.sample
+++ b/meta-intel-distro/conf/bblayers.conf.sample
@@ -8,6 +8,7 @@ BBFILES ?= ""
 BBLAYERS ?= " \
   ##OEROOT##/meta \
   ##OEROOT##/meta-poky \
+  ##OEROOT##/meta-yocto-bsp \
   ##OEROOT##/../meta-openembedded/meta-oe \
   ##OEROOT##/../meta-openembedded/meta-networking \
   ##OEROOT##/../meta-openembedded/meta-filesystems \
