--- a/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
@@ -9,4 +9,4 @@ SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
-APPEND = "console=tty0 console=ttyS0,115200 reboot=p,w intel_iommu=on idle=poll intel-spi.writeable=1"
+APPEND = "console=tty0 console=ttyS0,115200 reboot=p,w intel_iommu=off idle=poll intel-spi.writeable=1"
