linux: Update Configuration
Add CPU_FREQ_GOV_USERSPACE.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -245,6 +245,8 @@ CONFIG_CRYPTO_USER_API_AEAD=y
 
 CONFIG_AUXILIARY_BUS=y
 
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+
 # CONFIG_SOUND is not set
 # CONFIG_SND is not set
 # CONFIG_SND_PCI is not set
