meta-intel-bsp: Run Getty on ttyS0
SNR uses ttyS4, but when running a quest (qemu for example)
it is convinient to run getty on ttyS0 as well.

This commit adds running getty on ttyS0.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/conf/machine/intel-axxia-snr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-snr.conf
@@ -6,7 +6,7 @@ require conf/machine/include/intel-axxia-common.inc
 require conf/machine/include/tune-snr.inc
 
 SYSLINUX_OPTS = "serial 0 115200"
-SERIAL_CONSOLES = "115200;ttyS4"
+SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
 APPEND = "console=tty0 console=ttyS4,115200 intel_iommu=on idle=poll"
