meta-intel-bsp: Run Getty on ttyS0
SNR uses ttyS4, but when running a quest (qemu for example)
it is convinient to run getty on ttyS0 as well.

This commit adds running getty on ttyS0.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -20,7 +20,7 @@ KEEPUIMAGE = "no"
 EFI_PROVIDER ?= "grub-efi"
 
 SYSLINUX_OPTS = "serial 0 115200"
-SERIAL_CONSOLES = "115200;ttyS4"
+SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
 APPEND = "console=tty0 console=ttyS4,115200 intel_iommu=on idle=poll"
