layer.conf: Switch to kirkstone for LAYERSERIES_COMPAT
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "intel-rdk"
 BBFILE_PATTERN_intel-rdk = "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-rdk = "6"
 
-LAYERSERIES_COMPAT_intel-rdk = "hardknott"
+LAYERSERIES_COMPAT_intel-rdk = "kirkstone"
 LAYERDEPENDS_intel-rdk = "intel-bsp openembedded-layer"
 
 LAYER_PATH_meta-intel-rdk = "${LAYERDIR}" 
