--- a/meta-intel-bsp/conf/layer.conf
+++ b/meta-intel-bsp/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "intel-bsp"
 BBFILE_PATTERN_intel-bsp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_intel-bsp = "5"
 
-LAYERSERIES_COMPAT_intel-bsp = "hardknott"
+LAYERSERIES_COMPAT_intel-bsp = "kirkstone"
 LAYERDEPENDS_intel-bsp = "intel"
