Override syntax: replace '_' character with ':'
Converting the metadata to use ":" as the override character instead of "_".

Tested with scripts/contrib/convert-overrides.py script.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -12,23 +12,23 @@ SDK_VERSION := "${RELEASE_VERSION}"
 TARGET_VENDOR = "-intelaxxia"
 RELEASE_VERSION ?= "snr_deliveryXX_linuxX_XX"
 
-DISTRO_FEATURES_append = " pam virtualization kvm"
+DISTRO_FEATURES:append = " pam virtualization kvm"
 
 include conf/distro/include/intel-axxia-defaults.inc
 include conf/distro/include/intel-axxia-custom.inc
 include conf/distro/include/intel-axxia-flags.inc
 
 # Enable SIMICS support and set the version to compile
-#DISTRO_FEATURES_append = " simics"
+#DISTRO_FEATURES:append = " simics"
 #SIMICS_VERSION = ""
 
 # Choose GCC version: 9.% (gcc9) or 10.% (gcc10). Default version: 11.%
-#DISTRO_FEATURES_append = " gcc9"
+#DISTRO_FEATURES:append = " gcc9"
 
 # Select the version of python3 to use: 3.9 (default), 3.8 or 3.6.
 #PYTHON_VERSION = "3.8"
 
-BBMASK_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simics', '', \
+BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simics', '', \
 			'meta-intel-distro/recipes-support/simics', d)} \
 		  ${@oe.utils.conditional('ALTERNATIVE_KERNELS', '', \
 			'meta-intel-distro/recipes-kernel/lttng/lttng-modules-alternative*', '', d)} \
