--- a/meta-intel-distro/conf/layer.conf
+++ b/meta-intel-distro/conf/layer.conf
@@ -28,7 +28,7 @@ LAYERDEPENDS_intel-distro = " \
 "
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
-PREMIRRORS_prepend := "\
+PREMIRRORS:prepend := "\
      file://.*/.* file://${LAYERDIR}/downloads/ \n \
      git://.*/.* git:///${LAYERDIR}/downloads/MIRRORNAME;protocol=file \n \
      git://.*/.* file://${LAYERDIR}/downloads/ \n \
