meta-intel-distro: Remove obsoleted bbclasses
Starting with commit e897e02d21 and ce73f4f9d3 from poky,
image-mklibs and image-prelink classes were removed as obsoleted.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -32,7 +32,7 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 DISTRO = "intel-axxia"
 PACKAGE_CLASSES ?= "package_rpm"
 EXTRA_IMAGE_FEATURES = "debug-tweaks"
-USER_CLASSES ?= "buildstats image-mklibs image-prelink"
+USER_CLASSES ?= "buildstats"
 PATCHRESOLVE = "noop"
 BB_DISKMON_DIRS = "\
     STOPTASKS,${TMPDIR},1G,100K \
