meta-intel-distro: Ignore All Local Linux Configs
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 meta-intel-distro/downloads/simics*
-meta-intel-distro/recipes-kernel/linux/defconfig
+meta-intel-distro/recipes-kernel/linux/defconfig*
 meta-intel-bsp/downloads/*
 meta-intel-rdk/downloads/*
 __pycache__/
