conf/distro: Enable security and tpm in DISTRO_FEATURES
WARNING: You have included the meta-security layer, but 'security'
has not been enabled in your DISTRO_FEATURES. Some bbappend files
and preferred version setting may not take effect. See the
meta-security README for details on enabling security support.
WARNING: You have included the meta-tpm layer, but 'tpm or tpm2'
has not been enabled in your DISTRO_FEATURES. Some bbappend files
and preferred version setting may not take effect. See the meta-tpm
README for details on enabling tpm support.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -12,7 +12,7 @@ SDK_VERSION := "${RELEASE_VERSION}"
 TARGET_VENDOR = "-intelaxxia"
 RELEASE_VERSION ?= "snr_deliveryXX_linuxX_XX"
 
-DISTRO_FEATURES:append = " pam virtualization kvm"
+DISTRO_FEATURES:append = " pam virtualization kvm security tpm"
 
 include conf/distro/include/intel-axxia-defaults.inc
 include conf/distro/include/intel-axxia-custom.inc
