--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -18,27 +18,27 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 BB_NUMBER_THREADS ?= "${@oe.utils.cpu_count()}"
 PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 
-# Assume directories were created at the same level with poky
-# DL_DIR = "##OEROOT##/../downloads"
-# SSTATE_DIR = "##OEROOT##/../sstate_cache"
+# Assume directories were created under TOPDIR
+#DL_DIR ?= "${TOPDIR}/downloads"
+#SSTATE_DIR ?= "${TOPDIR}/sstate-cache"
+#TMPDIR = "${TOPDIR}/tmp"
 
 DISTRO = "intel-axxia"
 PACKAGE_CLASSES ?= "package_rpm"
-EXTRA_IMAGE_FEATURES = "debug-tweaks"
+EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 USER_CLASSES ?= "buildstats"
 PATCHRESOLVE = "noop"
-BB_DISKMON_DIRS = "\
+BB_DISKMON_DIRS ??= "\
     STOPTASKS,${TMPDIR},1G,100K \
     STOPTASKS,${DL_DIR},1G,100K \
     STOPTASKS,${SSTATE_DIR},1G,100K \
     STOPTASKS,/tmp,100M,100K \
-    ABORT,${TMPDIR},100M,1K \
-    ABORT,${DL_DIR},100M,1K \
-    ABORT,${SSTATE_DIR},100M,1K \
-    ABORT,/tmp,10M,1K"
-PACKAGECONFIG:append_pn-qemu-native = " sdl"
-PACKAGECONFIG:append_pn-nativesdk-qemu = " sdl"
-CONF_VERSION = "1"
+    HALT,${TMPDIR},100M,1K \
+    HALT,${DL_DIR},100M,1K \
+    HALT,${SSTATE_DIR},100M,1K \
+    HALT,/tmp,10M,1K"
+PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
+CONF_VERSION = "2"
 
 # For more options check meta-intel-distro layer for README and 
 # conf/local.conf.sample.extended
