intel-rdk: Rename LAYER_PATH variable to RDK_LAYER_PATH
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-rdk/conf/layer.conf
+++ b/meta-intel-rdk/conf/layer.conf
@@ -12,6 +12,6 @@ BBFILE_PRIORITY_intel-rdk = "6"
 LAYERSERIES_COMPAT_intel-rdk = "kirkstone"
 LAYERDEPENDS_intel-rdk = "intel-bsp openembedded-layer"
 
-LAYER_PATH_meta-intel-rdk = "${LAYERDIR}" 
+RDK_LAYER_PATH = "${LAYERDIR}" 
 
 require conf/distro/include/rdk-defaults.inc
