--- a/meta-intel-distro/conf/local.conf.sample
+++ b/meta-intel-distro/conf/local.conf.sample
@@ -4,6 +4,10 @@ MACHINE = "intel-axxia-grr"
 # Kernel providers: linux-intel, linux-intel-rt, linux-intel-debug, linux-intel-rt-debug
 PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 
+# Kernel versions: 5.15 (default) or 5.10
+PREFERRED_VERSION_linux-intel = "5.15%"
+PREFERRED_VERSION_linux-intel-debug = "5.15%"
+
 # Add simics support (sources should be in meta-intel-distro/download)
 # and set simics version to compile (mandatory).
 #DISTRO_FEATURES:append = " simics"
