--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
@@ -292,3 +292,5 @@ CONFIG_AUXILIARY_BUS=y
 # CONFIG_VIDEO_EM28XX_ALSA is not set
 # CONFIG_VIDEO_CX231XX_ALSA is not set
 # CONFIG_MEDIA_ALTERA_CI is not set
+
+CONFIG_SYNTH_EVENTS=y
