--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
@@ -31,6 +31,8 @@ CONFIG_GPIO_ICH=m
 CONFIG_GPIO_CRYSTAL_COVE=y
 CONFIG_BCMA_DRIVER_GPIO=y
 
+# CONFIG_NFS_V2 is not set
+
 CONFIG_NFSD=y
 # CONFIG_NFSD_V3 is not set
 # CONFIG_NFSD_V4 is not set
