conf/machine: Set 'core2-64' tune for INTEL QSP System
To boot axxia-image-qsp image on Intel ASE simulator using
QSP topology file (qsp_topology.xml), the hddimg image
should be built using 'core2-64' fine tuning.
Using GRR default tune (grr-64), ASE fail to boot:
Cannot find rootfs.img file in run/media/*, dropping to a shell

To build axxia-image-qsp image for INTEL QSP System (used
in simulation) the user need to set in local.conf:
DISTRO_FEATURES:append = " qsp"

B0273 - GRR QSP Build Won't Boot

Signed-off-by: Daniel Dragomir <daniel1x.dragomir@intel.com>

--- a/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
@@ -4,6 +4,8 @@
 
 require conf/machine/include/intel-axxia-common.inc
 require conf/machine/include/tune-grr.inc
+require ${@bb.utils.contains('DISTRO_FEATURES', 'qsp', \
+	'conf/machine/include/tune-qsp.inc', '', d)}
 
 SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
