--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
@@ -297,4 +297,7 @@ CONFIG_AUXILIARY_BUS=y
 
 CONFIG_SYNTH_EVENTS=y
 
+CONFIG_ARCH_MEMORY_PROBE=y
+CONFIG_MEMORY_HOTPLUG=y
+
 # CONFIG_RETHUNK is not set
