meta-intel-bsp: Add Config Options to Linux
CONFIG_ARCH_MEMORY_PROBE=y
CONFIG_MEMORY_HOTPLUG=y

This is to allow 'lsmem' to work.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -294,3 +294,6 @@ CONFIG_AUXILIARY_BUS=y
 # CONFIG_MEDIA_ALTERA_CI is not set
 
 CONFIG_SYNTH_EVENTS=y
+
+CONFIG_ARCH_MEMORY_PROBE=y
+CONFIG_MEMORY_HOTPLUG=y
