meta-intel-bsp: Add Kernel Configurations
To support fwts, add CGROUP_FREEZER, DMI_SYSFS, and EFI_TEST.

Also, add fwts to the -run and -dev images in meta-intel-distro.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
@@ -301,3 +301,7 @@ CONFIG_ARCH_MEMORY_PROBE=y
 CONFIG_MEMORY_HOTPLUG=y
 
 # CONFIG_RETHUNK is not set
+
+CONFIG_CGROUP_FREEZER=y
+CONFIG_DMI_SYSFS=y
+CONFIG_EFI_TEST=m
