wic: Merge grub-efi snd systemd-boot WKS
There is no need to keep separte .wks files since the only
difference is the bootloader (EFI_PROVIDER). By renaming the
*.wks to *.wks.in the file can be expanded and variables can
be used inside. If not, we'll get this errors:

| WARNING: cannot expand variable EFI_PROVIDER
| ERROR: unrecognized bootimg-efi loader: ${EFI_PROVIDER}

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-bsp/wic/axxia-bootdisk-microcode.wks.in
+++ b/meta-intel-bsp/wic/axxia-bootdisk-microcode.wks.in
@@ -1,9 +1,9 @@
-# short-description: Create an EFI disk image with systemd-boot
+# short-description: Create an EFI disk image for Intel Axxia BSPs
 # long-description: Creates a partitioned EFI disk image that the user
-# can directly dd to boot media. The selected bootloader is systemd-boot.
+# can directly dd to boot media. The bootloader is set via ${EFI_PROVIDER}.
 # It also includes intel-microcode as an initrd for early update support.
 
-part /boot --source axxia-bootimg-efi --sourceparams="loader=systemd-boot,initrd=microcode.cpio" --size 128 --ondisk sda --label msdos --active --align 1024 --use-uuid
+part /boot --source axxia-bootimg-efi --sourceparams="loader=${EFI_PROVIDER},initrd=microcode.cpio" --size 128 --ondisk sda --label msdos --active --align 1024 --use-uuid
 
 part / --source rootfs --ondisk sda --fstype=ext4 --label platform --align 1024 --use-uuid
 
