--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -1,6 +1,8 @@
 require conf/distro/poky.conf \
 	${@bb.utils.contains('DISTRO_FEATURES', 'multilib', \
-	'conf/multilib.conf', '', d)}
+	'conf/multilib.conf', '', d)} \
+	${@bb.utils.contains('DISTRO_FEATURES', 'qsp', \
+	'conf/distro/include/intel-axxia-qsp.inc', '', d)}
 
 DISTRO = "intel-axxia"
 DISTRO_NAME = "Intel Axxia Distro"
