--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/debug.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/debug.cfg
@@ -27,6 +27,7 @@ CONFIG_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=n
 CONFIG_DEBUG_KMEMLEAK_MEM_POOL_SIZE=8192
 CONFIG_DEBUG_RT_MUTEXES=y
+CONFIG_DEBUG_INFO_BTF=y
 
 CONFIG_PROVE_LOCKING=y
 CONFIG_LOCK_STAT=y
