intel-axxia: Add support for multiple GCC versions
Since the new GCC, version 13, supports 'grandridge' CPU as part of
the x86 family of computers [1], add support for 'grandridge' CPU_TYPE
for GRR machine/tuning.

[1] https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html

A0373 - GRR -- Add Support for GCC 13

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/conf/distro/intel-axxia.conf
+++ b/meta-intel-distro/conf/distro/intel-axxia.conf
@@ -24,6 +24,9 @@ include conf/distro/include/intel-axxia-flags.inc
 #DISTRO_FEATURES:append = " simics"
 #SIMICS_VERSION = ""
 
+# Choose GCC version: 13.% (gcc13). Default version: 11.%
+#DISTRO_FEATURES:append = " gcc13"
+
 BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'simics', '', \
 			'meta-intel-distro/recipes-support/simics', d)} \
 		  ${@oe.utils.conditional('ALTERNATIVE_KERNELS', '', \
