--- a/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
@@ -1,6 +1,8 @@
 #@TYPE: Machine
 #@NAME: intel-axxia-grr
-#@DESCRIPTION: Machine configuration for INTEL Axxia x86_64 Gen4 systems based on Intel Grand Ridge CPU with MMX, SSE, SSE2, SSE3, SSSE3, SSE4.1 and SSE4.2 instruction set support. Supports a moderately wide range of drivers that should boot and be usable on "typical" hardware.
+#@DESCRIPTION: Machine configuration for INTEL Axxia x86_64 Gen4 systems based on Intel Grand Ridge CPU with MOVBE, MMX, SSE, SSE2, SSE3, SSSE3, SSE4.1, SSE4.2, POPCNT, AES, PREFETCHW, PCLMUL, RDRND, XSAVE, XSAVEC, XSAVES, XSAVEOPT, FSGSBASE, PTWRITE, RDPID, SGX, GFNI-SSE, CLWB, MOVDIRI, MOVDIR64B, CLDEMOTE, WAITPKG, ADCX, AVX, AVX2, BMI, BMI2, F16C, FMA, LZCNT, PCONFIG, PKU, VAES, VPCLMULQDQ, SERIALIZE, HRESET, KL, WIDEKL, AVX-VNNI, AVXIFMA, AVXVNNIINT8, AVXNECONVERT, CMPCCXADD and RAOINT instruction set support. Supports a moderately wide range of drivers that should boot and be usable on "typical" hardware.
+
+CPU_TYPE ?= "${@bb.utils.contains('DISTRO_FEATURES', 'gcc13', 'grandridge', 'nehalem', d)}"
 
 require conf/machine/include/intel-axxia-common.inc
 require conf/machine/include/tune-grr.inc
