--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
@@ -116,6 +116,8 @@ CONFIG_DRM_AST=y
 CONFIG_EDAC=y
 CONFIG_EDAC_DEBUG=y
 CONFIG_EDAC_I10NM=y
+CONFIG_EDAC_ATOMIC_SCRUB=y
+CONFIG_EDAC_SUPPORT=y
 
 CONFIG_KEXEC=y
 CONFIG_CRASH_CORE=y
