--- a/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
+++ b/meta-intel-bsp/conf/machine/intel-axxia-grr.conf
@@ -11,4 +11,4 @@ SYSLINUX_OPTS = "serial 0 115200"
 SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS4"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 
-APPEND = "console=tty0 console=ttyS4,115200 reboot=p,w idle=poll intel-spi.writeable=1 intel_iommu=on iommu.passthrough=1"
+APPEND = "console=tty0 console=ttyS4,115200 reboot=p,w idle=poll intel-spi.writeable=1 intel_iommu=on,sm_on iommu.passthrough=1"
