meta-intel-bsp: Add Powersave Option
Add CPU_FREQ_COV_POWERSAVE options.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -303,3 +303,6 @@ CONFIG_DMI_SYSFS=y
 CONFIG_EFI_TEST=m
 
 CONFIG_PROFILING=y
+
+CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
