meta-intel-bsp: Update Linux Configuration
For 5.10 and 5.15, make i10nm_edac and einj modules, and add
all of the available governors.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.15/common-non-hw.cfg
@@ -115,7 +115,7 @@ CONFIG_DRM_AST=y
 
 CONFIG_EDAC=y
 CONFIG_EDAC_DEBUG=y
-CONFIG_EDAC_I10NM=y
+CONFIG_EDAC_I10NM=m
 CONFIG_EDAC_ATOMIC_SCRUB=y
 CONFIG_EDAC_SUPPORT=y
 
@@ -230,7 +230,7 @@ CONFIG_INTEL_IDXD=m
 CONFIG_DMATEST=m
 
 CONFIG_ACPI_APEI=y
-CONFIG_ACPI_APEI_EINJ=y
+CONFIG_ACPI_APEI_EINJ=m
 
 CONFIG_ITCO_WDT=m
 
@@ -309,3 +309,11 @@ CONFIG_DMI_SYSFS=y
 CONFIG_EFI_TEST=m
 
 CONFIG_PROFILING=y
+
+CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
