--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -113,7 +113,7 @@ CONFIG_DRM_AST=y
 
 CONFIG_EDAC=y
 CONFIG_EDAC_DEBUG=y
-CONFIG_EDAC_I10NM=y
+CONFIG_EDAC_I10NM=m
 
 CONFIG_KEXEC=y
 CONFIG_CRASH_CORE=y
@@ -226,7 +226,7 @@ CONFIG_INTEL_IDXD=m
 CONFIG_DMATEST=m
 
 CONFIG_ACPI_APEI=y
-CONFIG_ACPI_APEI_EINJ=y
+CONFIG_ACPI_APEI_EINJ=m
 
 CONFIG_ITCO_WDT=m
 
@@ -305,4 +305,9 @@ CONFIG_EFI_TEST=m
 CONFIG_PROFILING=y
 
 CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
