meta-intel-bsp: Change the Default Governor
Use the previous default from SNR (SCHEDUTIL) instead of POWERSAVE.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -31,6 +31,8 @@ CONFIG_GPIO_ICH=m
 CONFIG_GPIO_CRYSTAL_COVE=y
 CONFIG_BCMA_DRIVER_GPIO=y
 
+# CONFIG_NFS_V2 is not set
+
 CONFIG_NFSD=y
 # CONFIG_NFSD_V3 is not set
 # CONFIG_NFSD_V4 is not set
@@ -304,7 +306,7 @@ CONFIG_EFI_TEST=m
 
 CONFIG_PROFILING=y
 
-CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
