meta-intel-bsp: Update Linux Configuration
Add MEMORY_FAILURE, ACPI_APEI_GHES and ACPI_APEI_MEMORY_FAILURE.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
+++ b/meta-intel-bsp/recipes-kernel/linux/frags/5.10/common-non-hw.cfg
@@ -16,7 +16,6 @@ CONFIG_PCIEAER=y
 CONFIG_PINCTRL_EMMITSBURG=y
 
 CONFIG_PCIEAER_INJECT=y
-CONFIG_ACPI_APEI_PCIEAER=y
 CONFIG_X86_MCE_INJECT=y
 CONFIG_X86_MCELOG_LEGACY=y
 
@@ -227,7 +226,12 @@ CONFIG_INTEL_IDXD=m
 
 CONFIG_DMATEST=m
 
+CONFIG_MEMORY_FAILURE=y
+
 CONFIG_ACPI_APEI=y
+CONFIG_ACPI_APEI_GHES=y
+CONFIG_ACPI_APEI_PCIEAER=y
+CONFIG_ACPI_APEI_MEMORY_FAILURE=y
 CONFIG_ACPI_APEI_EINJ=m
 
 CONFIG_ITCO_WDT=m
